ゲストログイン機能のみ追加、NEXT[モデルの作成.ユーザーページの作成]

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About</h1>
-<p>GameExplorer は、ユーザーが作品をレビューしたり、評価を共有したりするためのアプリケーションです。</p>
+<p>GameExplorer は、ユーザーがゲーム作品をレビューしたり、レビューを共有したりするためのアプリケーションです。</p>
 
 <div class="about-image">
   
