--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           <% else %>
             <%= link_to '新規登録', new_user_registration_path %> |
             <%= link_to 'ログイン', new_user_session_path %> |
+            <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %> |
             <%= link_to 'About', about_path %>
           <% end %>
         </div>
