--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <div class="logo">
-          <%= link_to 'MyApp', root_path %> <!-- リンク付きロゴ -->
+          <%= link_to 'ロゴを配置予定 クリックするとTopページへ移動', root_path %> <!-- リンク付きロゴ -->
         </div>
         
         <div class="search-form">
@@ -24,7 +24,8 @@
 
         <div class="nav-links">
           <% if user_signed_in? %>
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+            <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %> |
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %> |
             <%= link_to 'About', about_path %>
           <% else %>
             <%= link_to '新規登録', new_user_registration_path %> |
