1stデプロイ+テスト完了

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,8 @@
 <h1>About</h1>
 <p>GameExplorer は、ユーザーがゲーム作品をレビューしたり、レビューを共有したりするためのアプリケーションです。</p>
 
+ここに新着レビュー対象のゲームリストや、話題のレビュー対象のゲームのリストを作成予定
+
 <div class="about-image">
   
 </div>
