--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,10 +1,8 @@
-<h1>全ユーザー一覧</h1>
+<h1>Admin Dashboard</h1>
+
 <ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %> - <%= user.email %>
-    </li>
-    <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %> 
-    </li>
-  <% end %>
+  <li><%= link_to '全ユーザー一覧', admin_users_path %></li>
+  <li><%= link_to 'ゲーム一覧', admin_games_path %></li>
+  <li><%= link_to 'ジャンル一覧', admin_genres_path %></li>
+  <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
 </ul>
