--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Admin Dashboard</h1>
 
+<h4>管理者トップページ</h4>
 <ul>
-  <li><%= link_to '全ユーザー一覧', admin_users_path %></li>
-  <li><%= link_to 'ゲーム一覧', admin_games_path %></li>
-  <li><%= link_to 'ジャンル一覧', admin_genres_path %></li>
-  <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
+  <!-- <li><%= link_to 'ユーザー一覧', admin_users_path %></li> -->
+  <!-- <li><%= link_to 'ゲーム一覧', admin_games_path %></li> -->
+  <!-- <li><%= link_to 'ジャンル一覧', admin_genres_path %></li> -->
+  <!-- <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li> -->
 </ul>
