--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,25 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Admin-Game Explorer</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><%= link_to '管理者トップ', admin_root_path %></li>
-        <li><%= link_to 'ユーザー一覧', admin_users_path %></li>
-        <li><%= link_to 'ゲーム一覧', admin_games_path %></li>
-        <li><%= link_to 'ジャンル一覧', admin_genres_path %></li>
-        <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <%= yield %>  <!-- ここにページの内容が挿入されます -->
-</body>
+  <head>
+    <title>管理者ページ | GameExplorer</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+
+  <body>
+    <!-- 管理者用ナビゲーションバー -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+          <!-- ロゴ -->
+          <a class="navbar-brand" href="<%= admin_dashboards_path %>">管理者ページ</a>
+
+          <!-- トグルボタン (モバイル用) -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- ナビゲーションメニュー -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <%= link_to 'ゲーム一覧', admin_games_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'ジャンル一覧',admin_genres_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'ユーザー管理', admin_users_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link' %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- メインコンテンツ -->
+    <main class="container mt-4">
+      <%= yield %>
+    </main>
+
+  </body>
 </html>
