--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,41 +4,68 @@
     <title>GameExplorer</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
   <body>
+    <!-- ナビゲーションバー -->
     <header>
-      <nav>
-        <div class="logo">
-          <%= link_to 'ロゴを配置予定 クリックするとTopページへ移動', root_path %> <!-- リンク付きロゴ -->
-        </div>
-        
-        <div class="search-form">
-          <%= form_with url: '#', method: :get, local: true do |f| %>
-            <%= f.text_field :query, placeholder: 'Search...' %>
-            <%= f.submit 'Search' %>
-          <% end %>
-        </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <!-- ロゴ -->
+          <a class="navbar-brand" href="<%= root_path %>">GameExplorer</a>
 
-        <div class="nav-links">
-          <% if user_signed_in? %>
-            <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %> |
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %> |
-            <%= link_to 'About', about_path %>
-          <% else %>
-            <%= link_to '新規登録', new_user_registration_path %> |
-            <%= link_to 'ログイン', new_user_session_path %> |
-            <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %> |
-            <%= link_to 'About', about_path %>
-          <% end %>
+          <!-- トグルボタン (モバイル用) -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <!-- ナビゲーションメニュー -->
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                    <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm sign_in", method: :post %>
+                  </li>
+                <li class="nav-item">
+                  <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
+                </li>
+              <% end %>
+              <li class="nav-item">
+                <%= link_to 'About', about_path, class: 'nav-link' %>
+              </li>
+            </ul>
+          </div>
+
+          <!-- 検索フォーム -->
+          <form class="d-flex ms-3" action="#" method="get">
+            <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
         </div>
       </nav>
     </header>
 
-    <main>
+    <!-- メインコンテンツ -->
+    <main class="container mt-4">
       <%= yield %>
     </main>
+
   </body>
 </html>
