--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -27,7 +27,7 @@
                   <span>画像なし</span>
                 <% end %>
               </td>
-              <td><%= game.name %></td>
+              <td><%= game.title %></td>
               <td><%= game.description %></td>
             </tr>
           <% end %>
