管理者の設定見直し、エンドユーザー画面に登録したゲームの表示

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,6 +21,9 @@
           <!-- ロゴ -->
           <a class="navbar-brand" href="<%= admin_dashboards_path %>">管理者ページ</a>
 
+          <!-- GameExplorerのトップページリンクを追加 -->
+          <a class="navbar-brand ms-3" href="<%= root_path %>">GameExplorer Top</a>  <!-- トップページへのリンクを追加 -->
+
           <!-- トグルボタン (モバイル用) -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +36,7 @@
                 <%= link_to 'ゲーム一覧', admin_games_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
-                <%= link_to 'ジャンル一覧',admin_genres_path, class: 'nav-link' %>
+                <%= link_to 'ジャンル一覧', admin_genres_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
                 <%= link_to 'ユーザー管理', admin_users_path, class: 'nav-link' %>
