--- a/app/views/admin/games/_form.html.erb
+++ b/app/views/admin/games/_form.html.erb
@@ -1,4 +1,14 @@
 <%= form_with model: game, url: admin_games_path, local: true, class: "card p-3 shadow" do |f| %>
+  <% if game.errors.any? %>
+    <div class="alert alert-danger">
+      <ul>
+        <% game.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
   <div class="mb-3">
     <%= f.label :title, "ゲーム名" %>
     <%= f.text_field :title, class: "form-control", placeholder: "ゲームの名前を入力" %>
@@ -12,6 +22,11 @@
   <div class="mb-3">
     <%= f.label :description, "紹介文" %>
     <%= f.text_area :description, class: "form-control", rows: 3, placeholder: "ゲームの紹介文を入力" %>
+  </div>
+
+  <div class="mb-3">
+    <%= f.label :genre_id, "ジャンル" %>
+    <%= f.collection_select :genre_id, Genre.all, :id, :name, { prompt: "ジャンルを選択" }, class: "form-control" %>
   </div>
 
   <%= f.submit "登録する", class: "btn btn-primary w-100" %>
