--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -1,38 +1,31 @@
 <div class="container mt-4">
-  <div class="row">
-    <!-- 左側: 新規登録フォーム (4/12) -->
-    <div class="col-md-4">
-      <h3>ゲーム新規登録</h3>
-      <%= render 'form', game: @game %>
-    </div>
 
-    <!-- 右側: ゲーム一覧 (8/12) -->
-    <div class="col-md-8">
-      <h3>ゲーム一覧</h3>
-      <table class="table table-bordered">
-        <thead class="table-dark">
-          <tr>
-            <th>画像</th>
-            <th>ゲーム名</th>
-            <th>紹介文</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @games.each do |game| %>
-            <tr>
-              <td>
-                <% if game.image.attached? %>
-                  <%= image_tag game.image, size: "100x100", class: "img-thumbnail" %>
-                <% else %>
-                  <span>画像なし</span>
-                <% end %>
-              </td>
-              <td><%= game.title %></td>
-              <td><%= game.description %></td>
-            </tr>
+  <h2>新規ゲーム登録</h2>
+  <%= render 'form', game: @game %>
+
+  <h1>ゲーム一覧</h1>
+
+  <div class="row">
+    <% @games.each_with_index do |game, index| %>
+      <div class="col-md-4 mb-4">
+        <div class="card shadow-sm">
+          <% if game.image.attached? %>
+            <%= link_to admin_game_path(game) do %>
+              <%= image_tag game.image, class: "card-img-top", style: "height: 200px; object-fit: cover;" %>
+            <% end %>
+          <% else %>
+            <div class="text-center py-5 bg-light">画像なし</div>
           <% end %>
-        </tbody>
-      </table>
-    </div>
+
+          <div class="card-body text-center">
+            <h5 class="card-title"><%= link_to game.title, admin_game_path(game), class: "text-dark text-decoration-none" %></h5>
+          </div>
+        </div>
+      </div>
+
+      <% if (index + 1) % 3 == 0 && index + 1 != @games.size %>
+        </div><div class="row">
+      <% end %>
+    <% end %>
   </div>
 </div>
