--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,30 @@
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+      /* フッターが常にページの下に表示されるようにする */
+      html, body {
+        height: 100%;
+      }
+
+      main {
+        flex: 1;
+      }
+
+      footer {
+        background-color: #343a40;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
 
-  <body>
+  <body class="d-flex flex-column">
     <!-- ナビゲーションバー -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -38,8 +59,8 @@
                 </li>
               <% else %>
                 <li class="nav-item">
-                    <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm sign_in", method: :post %>
-                  </li>
+                  <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm sign_in", method: :post %>
+                </li>
                 <li class="nav-item">
                   <%= link_to '新規登録', new_user_registration_path, class: 'nav-link' %>
                 </li>
@@ -67,5 +88,12 @@
       <%= yield %>
     </main>
 
+    <!-- フッター -->
+    <footer>
+      <p>&copy; <%= Time.now.year %> GameExplorer</p>
+      <% if current_user && current_user.admin? %>  <!-- 管理者ユーザーのみ表示 -->
+        <p><%= link_to "管理者用ログイン", new_admin_session_path, class: "text-white" %></p>
+      <% end %>
+    </footer>
   </body>
 </html>
