エンドユーザー側にも登録データの反映完了、次はゲームに対するレビュー等の作成

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>ユーザー編集</h1>
-
+<br>
 <%= form_with(model: @user, url: admin_user_path(@user), method: :patch) do |form| %>
   <div class="field">
     <%= form.label :name %><br>
@@ -11,14 +11,9 @@
     <%= form.email_field :email %>
   </div>
 
-  <div class="field">
-    <%= form.label :admin %>
-    <%= form.check_box :admin %>
-  </div>
-
   <div class="actions">
     <%= form.submit '更新' %>
   </div>
 <% end %>
 
-<%= link_to '戻る', admin_users_path %>
+<%= link_to '戻る', user_path(current_user) %>  <!-- ログインユーザーのマイページに戻る -->
