--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,25 @@
 <h1>GameExplorer</h1>
+
+<div class="row">
+  <% @games.each_with_index do |game, index| %>
+    <div class="col-md-4 mb-4">
+      <div class="card shadow-sm">
+        <% if game.image.attached? %>
+          <%= link_to game_path(game) do %> <!-- 管理者のゲーム詳細ページへリンク -->
+            <%= image_tag game.image, class: "card-img-top", style: "height: 200px; object-fit: cover;" %>
+          <% end %>
+        <% else %>
+          <div class="text-center py-5 bg-light">画像なし</div>
+        <% end %>
+
+        <div class="card-body text-center">
+          <h5 class="card-title"><%= link_to game.title, game_path(game), class: "text-dark text-decoration-none" %></h5>
+        </div>
+      </div>
+    </div>
+
+    <% if (index + 1) % 3 == 0 && index + 1 != @games.size %>
+      </div><div class="row">
+    <% end %>
+  <% end %>
+</div>
