--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,17 @@
         bottom: 0;
         width: 100%;
       }
+
+      header {
+        background-color: #343a40;  /* ヘッダーをフッターと同じ色に設定 */
+      }
     </style>
   </head>
 
   <body class="d-flex flex-column">
     <!-- ナビゲーションバー -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <!-- ロゴ -->
           <a class="navbar-brand" href="<%= root_path %>">GameExplorer</a>
