レビュー機能追加、順次拡張予定

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,3 +51,18 @@ header nav ul li a {
 header nav ul li a:hover {
   color: #0056b3;
 }
+
+.star {
+  font-size: 24px;
+  cursor: pointer;
+  color: gray;
+}
+
+.star.selected {
+  color: gold;
+}
+
+.stars {
+  font-size: 18px;
+  color: gold;
+}
