--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -26,7 +26,9 @@
     <% rating_counts = @game.reviews.group_by(&:rating).transform_values(&:count) %>
 
     <h3>レビュー統計</h3>
-    <p><strong>平均評価: </strong> <%= average_rating %> / 5 （⭐️ <%= "⭐" * average_rating.round %>）</p>
+    <p><strong>平均評価: </strong> <%= average_rating %> / 5
+    <%= render 'output_star', id: "average_rating", rating:average_rating %>
+    </p>
 
     <table class="table table-bordered">
       <thead>
@@ -38,7 +40,7 @@
       <tbody>
         <% (1..5).reverse_each do |star| %>
           <tr>
-            <td><%= "⭐" * star %>（<%= star %>）</td>
+            <td><%= render 'output_star', id: "sum-#{star}", rating:star %>（<%= star %>）</td>
             <td><%= rating_counts[star] || 0 %> 件</td>
           </tr>
         <% end %>
@@ -54,7 +56,10 @@
   <h3>レビュー一覧</h3>
   <% @game.reviews.each do |review| %>
     <div class="review-box">
-      <p><strong><%= review.user.name %></strong> (評価: <%= "⭐" * review.rating %>)</p>
+      <p>
+        <strong><%= review.user.name %></strong>
+        <%= render 'output_star', id:review.id, rating:review.rating %>
+      </p>
       <p><%= review.content %></p>
 
       <% if review.user == current_user %>
@@ -69,10 +74,21 @@
   <h3>レビューを投稿</h3>
   <% if user_signed_in? && !current_user.guest_user? %>
     <%= form_with(model: [@game, Review.new], local: true) do |form| %>
-      <div class="form-group">
-        <%= form.label :rating, "評価 (1〜5)" %>
-        <%= form.number_field :rating, in: 1..5, class: "form-control" %>
+      <div class="form-group position-static">
+          <p>評価:</P>
+          <div id="post_raty"></div> <!-- 星を出力するセレクタ -->
+            <script>
+                var elem = document.querySelector('#post_raty');
+                var opt = {
+                    starOn: "<%= asset_path('star-on.png') %>",
+                    starOff: "<%= asset_path('star-off.png') %>",
+                    scoreName: 'review[rating]',
+                };
+                raty(elem,opt);
+            </script>
+          </div>
       </div>
+
 
       <div class="form-group">
         <%= form.label :content, "レビュー内容" %>
