次回、aboutページの背景編集

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,16 +1,15 @@
-<h1>About</h1>
-<p>GameExplorer は、ユーザーがゲーム作品をレビューしたり、レビューを共有したりするためのアプリケーションです。</p>
-
-ここに新着レビュー対象のゲームリストや、話題のレビュー対象のゲームのリストを作成予定
-
-<div class="about-image">
-  
-</div>
-
-<br>
-<p>このアプリケーションでは以下の機能が提供されています</p>
-<ul>
-  <li>作品・ジャンル検索</li>
-  <li>レビューの投稿と閲覧</li>
-</ul>
-
+<body>
+  <div class="about-background">
+    <div class="text-container">
+      <h1>About</h1>
+      <p>GameExplorer は、ユーザーがゲーム作品をレビューしたり、レビューを共有したりするためのアプリケーションです。</p>
+      <p>ここに新着レビュー対象のゲームリストや、話題のレビュー対象のゲームのリストを作成予定</p>
+      <br>
+      <p>このアプリケーションでは以下の機能が提供されています</p>
+      <ul>
+        <li>ゲーム名検索・並べ替え</li>
+        <li>レビューの投稿と閲覧</li>
+      </ul>
+    </div>
+  </div>
+</body>
