--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <h1>GameExplorer</h1>
 
-<!-- 📌 並び替え & 🎯 ジャンル絞り込み -->
+<!-- 📌 並び替え -->
 <div class="mb-4">
   <%= form_with url: games_path, method: :get, local: true, class: "row g-3 align-items-center" do |f| %>
 
