--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
       <% @reviews.each do |review| %>
         <tr>
           <td><%= link_to review.game.title, game_path(review.game) %></td>
-          <td><%= "⭐" * review.rating %></td>
+          <td><%= render 'output_star', id:review.id, rating:review.rating %></td>
           <td><%= review.content.truncate(50) %></td>
           <td><%= review.created_at.strftime('%Y-%m-%d %H:%M') %></td>
           <td>
