--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       }
 
       main {
+        margin-top: 56px;
         flex: 1;
       }
 
@@ -34,6 +35,7 @@
 
       header {
         background-color: #343a40;  /* ヘッダーをフッターと同じ色に設定 */
+        height: 56px;
       }
     </style>
   </head>
@@ -89,7 +91,7 @@
     </header>
 
     <!-- メインコンテンツ -->
-    <main class="container mt-4">
+    <main class="container">
       <%= yield %>
     </main>
 
