--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,10 @@ header nav ul li {
   margin-right: 20px;
 }
 
+.admin-page main {
+  margin-top: 56px;
+}
+
 header nav ul li a {
   text-decoration: none;
   color: #007BFF;
